<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/templateBg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/color_F5F5F5"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/dateContainer"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:foreground="@drawable/ripple_default"
                    android:id="@+id/ivIcon"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_bento_item_bg"
                    android:padding="15dp"
                    android:src="@drawable/icon_setting"
                    android:visibility="visible" />

                <TextView
                    android:foreground="@drawable/ripple_default"
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="4"
                    android:background="@drawable/shape_bento_item_bg"
                    android:gravity="center"
                    android:paddingHorizontal="30dp"
                    android:text="Thursday, Aug 15, 2024 at 10:00"
                    android:textColor="@color/color_80000000"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_bento_item_bg"
                android:hint="@string/title_hint"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:singleLine="true"
                android:textColor="@color/color_A0000000"
                android:textColorHint="@color/color_40000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_bento_item_bg"
                android:hint="@string/text_hint"
                android:lineSpacingExtra="5sp"
                android:minHeight="64dp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_40000000"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/authorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etAuthor"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="2"
                    android:background="@drawable/shape_bento_item_bg"
                    android:hint="@string/author_hint"
                    android:paddingHorizontal="20dp"
                    android:textColor="@color/color_80000000"
                    android:textColorHint="@color/color_40000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:foreground="@drawable/ripple_default"
                    android:id="@+id/tvWordCount"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/shape_bento_item_bg"
                    android:gravity="center"
                    android:text="words: 0"
                    android:textColor="@color/color_80000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/qrCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_bento_item_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvQrCodeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/color_999999"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivQrCode" />

                <TextView
                    android:id="@+id/tvQrCodeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scan the qr code"
                    android:textColor="@color/color_B0B5B9"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvQrCodeTitle" />


                <ImageView
                    android:id="@+id/ivQrCode"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_qr_code"
                    android:tint="@color/color_B0B5B9"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/waterMarkContainer"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/shape_bento_item_bg">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/waterMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <ImageView
                        android:id="@+id/ivWatermark"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvWater"
                        style="@style/defaultTextStyle"
                        android:layout_marginHorizontal="4dp"
                        android:text="@string/app_name"
                        android:textColor="@color/color_80000000"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ivWatermark"
                        app:layout_constraintLeft_toRightOf="@+id/ivWatermark"
                        app:layout_constraintTop_toTopOf="@+id/ivWatermark" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>