<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/templateBg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/color_A0ffffff"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/iconContainer"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginBottom="10dp"

                android:background="@drawable/shape_geek_item_bg">

                <ImageView
                    android:id="@+id/ivIcon"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="14dp"
                    android:src="@drawable/icon_setting"
                    android:tint="@color/color_80ffffff"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/ivIcon"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:id="@+id/iconEmpty1"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_marginVertical="4dp"
                        android:background="@drawable/shape_geek_empty_text" />

                    <View
                        android:id="@+id/iconEmpty2"
                        android:layout_width="200dp"
                        android:layout_height="10dp"
                        android:layout_marginVertical="4dp"
                        android:background="@drawable/shape_geek_empty_text" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/mainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_geek_item_bg"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="Aug 15, 2024 at 116:21"
                    android:textColor="@color/color_60000000"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/title_hint"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_60000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@null"
                    android:hint="@string/text_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_60000000" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etAuthor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/author_hint"
                        android:textColor="@color/color_60000000"
                        android:textColorHint="@color/color_60000000"
                        android:textSize="14sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvWordCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="words: 0"
                        android:textColor="@color/color_60000000"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/qrCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_geek_item_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvQrCodeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/color_60000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivQrCode" />

                <TextView
                    android:id="@+id/tvQrCodeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scan the qr code"
                    android:textColor="@color/color_40000000"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvQrCodeTitle" />


                <ImageView
                    android:id="@+id/ivQrCode"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_qr_code"
                    android:tint="@color/color_B0B5B9"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/waterMarkContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_geek_item_bg"
                android:orientation="vertical"
                android:padding="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/waterMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView">

                    <ImageView
                        android:id="@+id/ivWatermark"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvWater"
                        style="@style/defaultTextStyle"
                        android:layout_marginHorizontal="4dp"
                        android:text="@string/app_name"
                        android:textColor="@color/color_60000000"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ivWatermark"
                        app:layout_constraintLeft_toRightOf="@+id/ivWatermark"
                        app:layout_constraintTop_toTopOf="@+id/ivWatermark" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/markEmpty1"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_geek_empty_text" />

                <View
                    android:id="@+id/markEmpty2"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_geek_empty_text" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <FrameLayout
        android:id="@+id/bottomGradient"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>